Remove the user dependancy on imputs. They should be more reusable than that.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -100,6 +100,26 @@
   "home.jobs.slider.user.jobs.will.perform.job.label": "Ongoing",
   "home.partners.description": "Just Arrived is a joint pro-bono initiative designed to help newly arrived immigrants to the Swedish labour market. We are owned by a foundation and is run by an association of companies.",
   "home.partners.title": "Our partners",
+  "input.account.number.label": "Account number",
+  "input.account.number.placeholder": "Account number",
+  "input.city.label": "City",
+  "input.city.placeholder": "City",
+  "input.clearing.number.label": "Clearing number",
+  "input.clearing.number.placeholder": "Clearing number",
+  "input.email.label": "Email",
+  "input.email.placeholder": "Email",
+  "input.first.name.label": "First name",
+  "input.first.name.placeholder": "First name",
+  "input.last.name.label": "Last name",
+  "input.last.name.placeholder": "Last name",
+  "input.password.label": "Password",
+  "input.password.placeholder": "Password",
+  "input.phone.label": "Phone",
+  "input.phone.placeholder": "Phone",
+  "input.street.label": "Street",
+  "input.street.placeholder": "Street",
+  "input.zip.label": "Zip code",
+  "input.zip.placeholder": "Zip code",
   "job.card.currency.per.hour": "{{currency}}/hour",
   "job.card.hours": "{{hours}} hours",
   "jobs.list.job_hours_and_hourly_salary": "{{hours}}h ({{hourlySalary}})",
@@ -152,26 +172,6 @@
   "user.account.cardnr": "Account number",
   "user.account.description": "Where would you like your salary to be paid out once you have completed the job?",
   "user.account": "Bank account details",
-  "user.form.account.number.label": "Account number",
-  "user.form.account.number.placeholder": "Account number",
-  "user.form.city.header": "City",
-  "user.form.city.placeholder": "City",
-  "user.form.clearing.number.label": "Clearing number",
-  "user.form.clearing.number.placeholder": "Clearing number",
-  "user.form.email.header": "Email",
-  "user.form.email.placeholder": "Email",
-  "user.form.first.name.input.label": "First name",
-  "user.form.first.name.input.placeholder": "First name",
-  "user.form.last.name.input.label": "Last name",
-  "user.form.last.name.input.placeholder": "Last name",
-  "user.form.password.input.label": "Password",
-  "user.form.password.input.placeholder": "Password",
-  "user.form.phone.label": "Phone",
-  "user.form.phone.placeholder": "Phone",
-  "user.form.street.header": "Street",
-  "user.form.street.placeholder": "Street",
-  "user.form.zip.header": "Zip code",
-  "user.form.zip.placeholder": "Zip",
   "user.profile.form.at.und.label": "AT-UND",
   "user.profile.form.coordination.number.label": "Please provide the coordination number",
   "user.profile.form.coordination.number.or.ssn.label": "Social security number or coordination number",
