Added system language component

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -122,6 +122,9 @@
   "input.repeat.password.placeholder": "Repeat password",
   "input.street.label": "Street",
   "input.street.placeholder": "Street",
+  "input.system.language.label": "Default language",
+  "input.system.language.placeholder": "Default language",
+  "input.system.language.description": "This is the language we will use to communicate with you",
   "input.zip.label": "Zip code",
   "input.zip.placeholder": "Zip code",
   "job.card.currency.per.hour": "{{currency}}/hour",
