Added terms input component

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -100,14 +100,15 @@
   "home.jobs.slider.user.jobs.will.perform.job.label": "Ongoing",
   "home.partners.description": "Just Arrived is a joint pro-bono initiative designed to help newly arrived immigrants to the Swedish labour market. We are owned by a foundation and is run by an association of companies.",
   "home.partners.title": "Our partners",
+  "input.terms.label": "I accept Just Arrived's terms, conditions and employment contract",
   "input.account.number.label": "Account number",
   "input.account.number.placeholder": "Account number",
   "input.city.label": "City",
   "input.city.placeholder": "City",
-  "input.country.of.origin.label": "Country of origin",
-  "input.country.of.origin.placeholder": "Country of origin",
   "input.clearing.number.label": "Clearing number",
   "input.clearing.number.placeholder": "Clearing number",
+  "input.country.of.origin.label": "Country of origin",
+  "input.country.of.origin.placeholder": "Country of origin",
   "input.email.label": "Email",
   "input.email.placeholder": "Email",
   "input.first.name.label": "First name",
@@ -124,9 +125,9 @@
   "input.repeat.password.placeholder": "Repeat password",
   "input.street.label": "Street",
   "input.street.placeholder": "Street",
+  "input.system.language.description": "This is the language we will use to communicate with you",
   "input.system.language.label": "Default language",
   "input.system.language.placeholder": "Default language",
-  "input.system.language.description": "This is the language we will use to communicate with you",
   "input.zip.label": "Zip code",
   "input.zip.placeholder": "Zip code",
   "job.card.currency.per.hour": "{{currency}}/hour",
@@ -275,7 +276,7 @@
   "user.register.form.submit.button": "Sign up",
   "user.register.form.submit.fail": "There are some errors, please review them above.",
   "user.register.form.submit.success": "Your account was successfully created. You can now use it to sign in.",
-  "user.register.form.terms.accept": "I accept Just Arrived's terms, conditions and employment contract",
+  "user.register.form.terms.section.header": "Terms and conditions",
   "user.register.title": "Sign up",
   "user.settings.form.address.header": "Address",
   "user.settings.form.bank.details.header": "Bank details",
