add form submit button component

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -23,6 +23,8 @@
   "assignment.status.reply": "Accept offer",
   "assignment.status.user_company_hire": "The company wants to hire you",
   "assignment.status.you_hired": "You've been hired",
+  "button.form.submit.fail": "There are some errors, please review them above.",
+  "button.form.submit.success": "Success!",
   "common.back": "Back",
   "common.congratulation": "Congratulations!",
   "common.error": "Oops, something went a bit wrong... But don't worry, we are on it!",
@@ -100,7 +102,6 @@
   "home.jobs.slider.user.jobs.will.perform.job.label": "Ongoing",
   "home.partners.description": "Just Arrived is a joint pro-bono initiative designed to help newly arrived immigrants to the Swedish labour market. We are owned by a foundation and is run by an association of companies.",
   "home.partners.title": "Our partners",
-  "input.terms.label": "I accept Just Arrived's terms, conditions and employment contract",
   "input.account.number.label": "Account number",
   "input.account.number.placeholder": "Account number",
   "input.city.label": "City",
@@ -128,6 +129,7 @@
   "input.system.language.description": "This is the language we will use to communicate with you",
   "input.system.language.label": "Default language",
   "input.system.language.placeholder": "Default language",
+  "input.terms.label": "I accept Just Arrived's terms, conditions and employment contract",
   "input.zip.label": "Zip code",
   "input.zip.placeholder": "Zip code",
   "job.card.currency.per.hour": "{{currency}}/hour",
