Added new password and repeat password input

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -126,6 +126,10 @@
   "input.name.placeholder": "Name",
   "input.password.label": "Password",
   "input.password.placeholder": "Password",
+  "input.old.password.label": "Old password",
+  "input.old.password.placeholder": "Old password",
+  "input.new.password.label": "New password",
+  "input.new.password.placeholder": "New password",
   "input.phone.label": "Phone",
   "input.phone.placeholder": "Phone",
   "input.repeat.password.label": "Repeat password",
@@ -288,7 +292,7 @@
   "user.register.title": "Sign up",
   "user.settings.form.address.header": "Address",
   "user.settings.form.bank.details.header": "Bank details",
-  "user.settings.form.change.password.header": "Password",
+  "user.settings.form.change.password.header": "Change password",
   "user.settings.form.new.password.label": "Change password",
   "user.settings.form.new.password.placeholder": "New password",
   "user.settings.form.old.password.placeholder": "Old password",
