added competence and job experience inputs

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -108,28 +108,32 @@
   "input.city.placeholder": "City",
   "input.clearing.number.label": "Clearing number",
   "input.clearing.number.placeholder": "Clearing number",
+  "input.competence.label": "General skills",
+  "input.competence.placeholder": "General skills",
   "input.country.of.origin.label": "Country of origin",
   "input.country.of.origin.placeholder": "Country of origin",
   "input.email.label": "Email",
-  "input.email.placeholder": "Email",
   "input.email.or.phone.label": "Email or phone",
   "input.email.or.phone.placeholder": "Email or phone",
+  "input.email.placeholder": "Email",
   "input.first.name.label": "First name",
   "input.first.name.placeholder": "First name",
   "input.gender.label": "Gender",
   "input.gender.placeholder": "Gender",
+  "input.job.experience.label": "Work experience",
+  "input.job.experience.placeholder": "Work experience",
   "input.last.name.label": "Last name",
   "input.last.name.placeholder": "Last name",
   "input.message.label": "Message",
   "input.message.placeholder": "Message",
   "input.name.label": "Name",
   "input.name.placeholder": "Name",
-  "input.password.label": "Password",
-  "input.password.placeholder": "Password",
-  "input.old.password.label": "Old password",
-  "input.old.password.placeholder": "Old password",
   "input.new.password.label": "New password",
   "input.new.password.placeholder": "New password",
+  "input.old.password.label": "Old password",
+  "input.old.password.placeholder": "Old password",
+  "input.password.label": "Password",
+  "input.password.placeholder": "Password",
   "input.phone.label": "Phone",
   "input.phone.placeholder": "Phone",
   "input.repeat.password.label": "Repeat password",
