Image card upload components

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,4 +1,36 @@
 {
+  "input.at.und.label": "Do you have an AT-UND permit? (Allowed to work during asylum)",
+  "input.description.label": "Describe yourself",
+  "input.description.placeholder": "Describe yourself",
+  "input.got.coordination.number.label": "Do yoo have a coordination number (samordningsnummmer)?",
+  "input.ssn.label": "Social security number or coordination number",
+  "input.ssn.placeholder":  "Social security number or coordination number",
+  "input.education.label": "Describe your education",
+  "input.education.placeholder":  "Describe your education",
+  "input.lma.card.label": "LMA card",
+  "input.lma.card.header": "LMA card",
+  "input.lma.card.description": "Photo of my LMA card",
+  "input.personal.id.label": "Personal ID",
+  "input.personal.id.header": "Personal ID",
+  "input.personal.id.description": "Photo of my personal ID card",
+  "input.residence.permit.front.label": "Residence permit",
+  "input.residence.permit.front.header": "Residence permit",
+  "input.residence.permit.front.description": "Front photo of my residence permit",
+  "input.residence.permit.back.label": "Residence permit",
+  "input.residence.permit.back.header": "Residence permit",
+  "input.residence.permit.back.description": "Back photo of my residence permit",
+  "input.work.permit.front.label": "Work permit",
+  "input.work.permit.front.header": "Work permit",
+  "input.work.permit.front.description": "Front photo of my work permit",
+  "input.work.permit.back.label": "Work permit",
+  "input.work.permit.back.header": "Work permit",
+  "input.work.permit.back.description": "Back photo of my work permit",
+  "input.skatteverket.certificate.label": "Coordination number certificate",
+  "input.skatteverket.certificate.header": "Coordination number certificate",
+  "input.skatteverket.certificate.description": "Photo of my coordination number certificate (from the swedish tax agency)",
+  "": "",
+  "": "",
+  "": "",
   "applications.title": "Just Arrived",
   "assignment.after_tax": "after tax",
   "assignment.assignments.title": "Job",
