Display red background error on fields properly

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,36 +1,4 @@
 {
-  "input.at.und.label": "Do you have an AT-UND permit? (Allowed to work during asylum)",
-  "input.description.label": "Describe yourself",
-  "input.description.placeholder": "Describe yourself",
-  "input.got.coordination.number.label": "Do yoo have a coordination number (samordningsnummmer)?",
-  "input.ssn.label": "Social security number or coordination number",
-  "input.ssn.placeholder":  "Social security number or coordination number",
-  "input.education.label": "Describe your education",
-  "input.education.placeholder":  "Describe your education",
-  "input.lma.card.label": "LMA card",
-  "input.lma.card.header": "LMA card",
-  "input.lma.card.description": "Photo of my LMA card",
-  "input.personal.id.label": "Personal ID",
-  "input.personal.id.header": "Personal ID",
-  "input.personal.id.description": "Photo of my personal ID card",
-  "input.residence.permit.front.label": "Residence permit",
-  "input.residence.permit.front.header": "Residence permit",
-  "input.residence.permit.front.description": "Front photo of my residence permit",
-  "input.residence.permit.back.label": "Residence permit",
-  "input.residence.permit.back.header": "Residence permit",
-  "input.residence.permit.back.description": "Back photo of my residence permit",
-  "input.work.permit.front.label": "Work permit",
-  "input.work.permit.front.header": "Work permit",
-  "input.work.permit.front.description": "Front photo of my work permit",
-  "input.work.permit.back.label": "Work permit",
-  "input.work.permit.back.header": "Work permit",
-  "input.work.permit.back.description": "Back photo of my work permit",
-  "input.skatteverket.certificate.label": "Coordination number certificate",
-  "input.skatteverket.certificate.header": "Coordination number certificate",
-  "input.skatteverket.certificate.description": "Photo of my coordination number certificate (from the swedish tax agency)",
-  "": "",
-  "": "",
-  "": "",
   "applications.title": "Just Arrived",
   "assignment.after_tax": "after tax",
   "assignment.assignments.title": "Job",
@@ -136,6 +104,7 @@
   "home.partners.title": "Our partners",
   "input.account.number.label": "Account number",
   "input.account.number.placeholder": "Account number",
+  "input.at.und.label": "Do you have an AT-UND permit? (Allowed to work during asylum)",
   "input.city.label": "City",
   "input.city.placeholder": "City",
   "input.clearing.number.label": "Clearing number",
@@ -144,6 +113,10 @@
   "input.competence.placeholder": "General skills",
   "input.country.of.origin.label": "Country of origin",
   "input.country.of.origin.placeholder": "Country of origin",
+  "input.description.label": "Describe yourself",
+  "input.description.placeholder": "Describe yourself",
+  "input.education.label": "Describe your education",
+  "input.education.placeholder":  "Describe your education",
   "input.email.label": "Email",
   "input.email.or.phone.label": "Email or phone",
   "input.email.or.phone.placeholder": "Email or phone",
@@ -152,12 +125,16 @@
   "input.first.name.placeholder": "First name",
   "input.gender.label": "Gender",
   "input.gender.placeholder": "Gender",
+  "input.got.coordination.number.label": "Do yoo have a coordination number (samordningsnummmer)?",
   "input.job.experience.label": "Work experience",
   "input.job.experience.placeholder": "Work experience",
   "input.languages.label": "Language skills",
   "input.languages.placeholder": "Language skills",
   "input.last.name.label": "Last name",
   "input.last.name.placeholder": "Last name",
+  "input.lma.card.description": "Photo of my LMA card",
+  "input.lma.card.header": "LMA card",
+  "input.lma.card.label": "LMA card",
   "input.message.label": "Message",
   "input.message.placeholder": "Message",
   "input.name.label": "Name",
@@ -168,12 +145,26 @@
   "input.old.password.placeholder": "Old password",
   "input.password.label": "Password",
   "input.password.placeholder": "Password",
+  "input.personal.id.description": "Photo of my personal ID card",
+  "input.personal.id.header": "Personal ID",
+  "input.personal.id.label": "Personal ID",
   "input.phone.label": "Phone",
   "input.phone.placeholder": "Phone",
   "input.repeat.password.label": "Repeat password",
   "input.repeat.password.placeholder": "Repeat password",
+  "input.residence.permit.back.description": "Back photo of my residence permit",
+  "input.residence.permit.back.header": "Residence permit",
+  "input.residence.permit.back.label": "Residence permit",
+  "input.residence.permit.front.description": "Front photo of my residence permit",
+  "input.residence.permit.front.header": "Residence permit",
+  "input.residence.permit.front.label": "Residence permit",
+  "input.skatteverket.certificate.description": "Photo of my coordination number certificate (from the swedish tax agency)",
+  "input.skatteverket.certificate.header": "Coordination number certificate",
+  "input.skatteverket.certificate.label": "Coordination number certificate",
   "input.skills.label": "Skills",
   "input.skills.placeholder": "Skills",
+  "input.ssn.label": "Social security number or coordination number",
+  "input.ssn.placeholder":  "Social security number or coordination number",
   "input.status.label": "Current status",
   "input.status.placeholder": "Current status",
   "input.street.label": "Street",
@@ -182,6 +173,12 @@
   "input.system.language.label": "Default language",
   "input.system.language.placeholder": "Default language",
   "input.terms.label": "I accept Just Arrived's terms, conditions and employment contract",
+  "input.work.permit.back.description": "Back photo of my work permit",
+  "input.work.permit.back.header": "Work permit",
+  "input.work.permit.back.label": "Work permit",
+  "input.work.permit.front.description": "Front photo of my work permit",
+  "input.work.permit.front.header": "Work permit",
+  "input.work.permit.front.label": "Work permit",
   "input.zip.label": "Zip code",
   "input.zip.placeholder": "Zip code",
   "job.card.currency.per.hour": "{{currency}}/hour",
@@ -344,6 +341,7 @@
   "user.settings.form.submit.button": "Save profile changes",
   "user.settings.form.submit.fail": "There are some errors, please review them above.",
   "user.settings.form.submit.success": "Your profile was updated successfully!",
+  "user.settings.form.settings.header": "Settings",
   "validations.email_pattern": "must look like an email address",
   "validations.maxlength": "is too long (maximum {{maxLength}} characters)",
   "validations.minlength": "is too short (minimum {{minLength}} characters)",
