Update form section headers

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -233,114 +233,35 @@
   "user.account.cardnr": "Account number",
   "user.account.description": "Where would you like your salary to be paid out once you have completed the job?",
   "user.account": "Bank account details",
-  "user.profile.form.at.und.label": "AT-UND",
-  "user.profile.form.coordination.number.label": "Please provide the coordination number",
-  "user.profile.form.coordination.number.or.ssn.label": "Social security number or coordination number",
-  "user.profile.form.coordination.number.placeholder": "Coordination number",
-  "user.profile.form.country.label": "Country of origin",
-  "user.profile.form.country.placeholder": "Select Country",
-  "user.profile.form.default.language.description": "This is the language we will use to communicate with you",
-  "user.profile.form.default.language.label": "Default language",
-  "user.profile.form.default.language.placeholder": "Default language",
-  "user.profile.form.default.language.required": "Please choose the default language",
-  "user.profile.form.general.description.label": "Presentation",
-  "user.profile.form.general.description.placeholder": "Presentation",
-  "user.profile.form.general.skills.label": "General skills",
-  "user.profile.form.general.skills.placeholder": "General skills",
-  "user.profile.form.got.coordination.number.label": "Coordination number",
-  "user.profile.form.language.proficiency.placeholder": "Language proficiency",
-  "user.profile.form.languages.label": "Other language skills",
-  "user.profile.form.languages.placeholder": "Select Languages",
-  "user.profile.form.lma.upload.button": "Upload",
-  "user.profile.form.lma.upload.description": "Upload photo of LMA card",
-  "user.profile.form.lma.upload.fail": "Photo of LMA card could not be uploaded",
-  "user.profile.form.lma.upload.success": "Photo of LMA card has been uploaded",
-  "user.profile.form.native.language.label": "Native language",
-  "user.profile.form.native.language.placeholder": "Select Language",
-  "user.profile.form.personal.id.upload.button": "Upload",
-  "user.profile.form.personal.id.upload.description": "Upload photo of personal id card",
-  "user.profile.form.personal.id.upload.fail": "Photo of personal id could not be uploaded",
-  "user.profile.form.personal.id.upload.success": "Photo of personal id has been uploaded",
-  "user.profile.form.residence.permit.back.upload.button": "Upload",
-  "user.profile.form.residence.permit.back.upload.description": "Upload back photo of residence permit",
-  "user.profile.form.residence.permit.back.upload.fail": "Back photo of residence permit could not be uploaded",
-  "user.profile.form.residence.permit.back.upload.success": "Back photo of residence permit has been uploaded",
-  "user.profile.form.residence.permit.front.upload.button": "Upload",
-  "user.profile.form.residence.permit.front.upload.description": "Upload front photo of residence permit",
-  "user.profile.form.residence.permit.front.upload.fail": "Front photo of residence permit could not be uploaded",
-  "user.profile.form.residence.permit.front.upload.success": "Front photo of residence permit has been uploaded",
+  "user.profile.form.personal.presentation.section.header": "Personal presentation",
+  "user.profile.form.status.section.header": "Status",
+  "user.profile.form.language.skills.section.header": "Language skills",
+  "user.profile.form.general.skills.section.header": "General skills",
+  "user.profile.form.education.section.header": "Education",
+  "user.profile.form.work.experience.section.header": "Work experience",
   "user.profile.form.resume.label": "Resumé",
   "user.profile.form.resume.list.title": "Previously uploaded resumés.",
   "user.profile.form.resume.upload.button": "Upload",
   "user.profile.form.resume.upload.description": "Upload your resumé",
   "user.profile.form.resume.upload.fail": "Resumé could not be uploaded, please try again (PDF works best).",
   "user.profile.form.resume.upload.success": "Resumé has been uploaded.",
-  "user.profile.form.skatteverket.certificate.upload.button": "Upload",
-  "user.profile.form.skatteverket.certificate.upload.description": "Upload photo of coordination number certificate (from the swedish tax agency)",
-  "user.profile.form.skatteverket.certificate.upload.fail": "Photo of coordination number certificate could not be uploaded",
-  "user.profile.form.skatteverket.certificate.upload.success": "Photo of coordination number certificate has been uploaded",
-  "user.profile.form.skill.proficiency.placeholder": "Skill proficiency",
-  "user.profile.form.skills.label": "Skills",
-  "user.profile.form.skills.placeholder": "Select Skills",
-  "user.profile.form.ssn.label": "Social security number",
-  "user.profile.form.status.label": "Current status",
   "user.profile.form.submit.button": "Save profile changes",
-  "user.profile.form.submit.fail": "There are some errors, please review them above.",
-  "user.profile.form.submit.success": "Your profile was updated successfully!",
-  "user.profile.form.work.experience.label": "Work experience",
-  "user.profile.form.work.experience.placeholder": "Work experience",
-  "user.profile.form.work.permit.back.upload.button": "Upload",
-  "user.profile.form.work.permit.back.upload.description": "Upload back photo of work permit",
-  "user.profile.form.work.permit.back.upload.fail": "Back photo of work permit could not be uploaded",
-  "user.profile.form.work.permit.back.upload.success": "Back photo of work permit has been uploaded",
-  "user.profile.form.work.permit.front.upload.button": "Upload",
-  "user.profile.form.work.permit.front.upload.description": "Upload front photo of work permit",
-  "user.profile.form.work.permit.front.upload.fail": "Front photo of work permit could not be uploaded",
-  "user.profile.form.work.permit.front.upload.success": "Front photo of work permit has been uploaded",
   "user.profile.header.information": "Remember that a complete profile increases your chances of getting jobs",
   "user.profile.header.title": "Profile",
   "user.profile.tab.personal.details.title": "Personal",
   "user.profile.tab.profile.details.title": "Profile",
   "user.register.form.address.section.header": "Address",
-  "user.register.form.country.and.languages.section.header": "Country of origin and language",
-  "user.register.form.country.of.origin.header": "Country of origin",
-  "user.register.form.country.of.origin.placeholder": "Country of origin",
-  "user.register.form.default.language.description": "This is the language we will use to communicate with you",
-  "user.register.form.default.language.header": "Default language",
-  "user.register.form.default.language.placeholder": "Default language",
-  "user.register.form.email.validation.pattern": "That is not a valid email",
-  "user.register.form.first.name.header": "First name",
-  "user.register.form.first.name.placeholder": "First name",
-  "user.register.form.gender.header": "Gender",
-  "user.register.form.gender.placeholder": "Gender",
+  "user.register.form.settings.section.header": "Settings",
   "user.register.form.general.information.section.header": "General information",
-  "user.register.form.last.name.header": "Last name",
-  "user.register.form.last.name.placeholder": "Last name",
-  "user.register.form.native.language.header": "Native language",
-  "user.register.form.native.language.placeholder": "Native language",
-  "user.register.form.password.header": "Password",
-  "user.register.form.password.placeholder": "Password",
   "user.register.form.password.section.header": "Password",
-  "user.register.form.repeat.password.header": "Repeat the password",
-  "user.register.form.repeat.password.placeholder": "Repeat password",
-  "user.register.form.repeat.password.validation.mismatch": "Supplied passwords does not match",
   "user.register.form.submit.button": "Sign up",
-  "user.register.form.submit.fail": "There are some errors, please review them above.",
-  "user.register.form.submit.success": "Your account was successfully created. You can now use it to sign in.",
   "user.register.form.terms.section.header": "Terms and conditions",
   "user.register.title": "Sign up",
   "user.settings.form.address.header": "Address",
   "user.settings.form.bank.details.header": "Bank details",
   "user.settings.form.change.password.header": "Change password",
-  "user.settings.form.new.password.label": "Change password",
-  "user.settings.form.new.password.placeholder": "New password",
-  "user.settings.form.old.password.placeholder": "Old password",
   "user.settings.form.personal.info.header": "Personal information",
-  "user.settings.form.repeat.password.placeholder": "Repeat password",
-  "user.settings.form.repeat.password.validation.mismatch": "Supplied passwords does not match",
   "user.settings.form.submit.button": "Save profile changes",
-  "user.settings.form.submit.fail": "There are some errors, please review them above.",
-  "user.settings.form.submit.success": "Your profile was updated successfully!",
   "user.settings.form.settings.header": "Settings",
   "validations.email_pattern": "must look like an email address",
   "validations.maxlength": "is too long (maximum {{maxLength}} characters)",
