Use button component throughout the codebase

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -61,6 +61,7 @@
   "contact.form.name.placeholder": "Name",
   "contact.form.submit.button": "Send",
   "contact.title": "Contact",
+  "cookies.accept.button": "Accept",
   "cookies.description": "By using the justarrived.se website, you agree to the use of cookies by us and third parties to enhance your experience. For more information, or to change your cookie settings.",
   "cookies.info.description": "We use cookies for technical reasons to simplify the use of our services and to give you the user more relevant information when your visit our website. Cookies are also used to measure traffic to our website, for the collection of data and to improve our services. By using our services, you accept that we use cookies, as long as you have not disabled them in your cookies settings in your web browser.",
   "cookies.info.title": "About cookies",
@@ -202,6 +203,7 @@
   "map.geolocation.error.prefix": "Your location could not be established because {{mapError}}",
   "map.geolocation.error.timeout": "service timeout has been reached.",
   "map.geolocation.error.unsupportedBrowser": "your browser does not support location services.",
+  "map.marker.info.button": "Go to job",
   "menu.language.text_1": "You can go back and change your selected language later if you like.",
   "menu.language.text_2": "Jobs, comments and messages are translated automatically.",
   "menu.language.title": "Select language",
@@ -213,6 +215,7 @@
   "menu.main.logout": "Log out",
   "menu.main.my_assignment": "My jobs",
   "menu.main.profile": "Profile",
+  "menu.main.register": "Create user",
   "menu.main.staffing_time_report": "Time report",
   "page.not.found.error.description": "Sorry, the page you are looking for does not exist.",
   "page.not.found.error.title": "404 - Page Not Found",
@@ -233,27 +236,27 @@
   "user.account.cardnr": "Account number",
   "user.account.description": "Where would you like your salary to be paid out once you have completed the job?",
   "user.account": "Bank account details",
-  "user.profile.form.personal.presentation.section.header": "Personal presentation",
-  "user.profile.form.status.section.header": "Status",
-  "user.profile.form.language.skills.section.header": "Language skills",
-  "user.profile.form.general.skills.section.header": "General skills",
   "user.profile.form.education.section.header": "Education",
-  "user.profile.form.work.experience.section.header": "Work experience",
+  "user.profile.form.general.skills.section.header": "General skills",
+  "user.profile.form.language.skills.section.header": "Language skills",
+  "user.profile.form.personal.presentation.section.header": "Personal presentation",
   "user.profile.form.resume.label": "Resumé",
   "user.profile.form.resume.list.title": "Previously uploaded resumés.",
   "user.profile.form.resume.upload.button": "Upload",
   "user.profile.form.resume.upload.description": "Upload your resumé",
   "user.profile.form.resume.upload.fail": "Resumé could not be uploaded, please try again (PDF works best).",
   "user.profile.form.resume.upload.success": "Resumé has been uploaded.",
+  "user.profile.form.status.section.header": "Status",
   "user.profile.form.submit.button": "Save profile changes",
+  "user.profile.form.work.experience.section.header": "Work experience",
   "user.profile.header.information": "Remember that a complete profile increases your chances of getting jobs",
   "user.profile.header.title": "Profile",
   "user.profile.tab.personal.details.title": "Personal",
   "user.profile.tab.profile.details.title": "Profile",
   "user.register.form.address.section.header": "Address",
-  "user.register.form.settings.section.header": "Settings",
   "user.register.form.general.information.section.header": "General information",
   "user.register.form.password.section.header": "Password",
+  "user.register.form.settings.section.header": "Settings",
   "user.register.form.submit.button": "Sign up",
   "user.register.form.terms.section.header": "Terms and conditions",
   "user.register.title": "Sign up",
@@ -261,8 +264,8 @@
   "user.settings.form.bank.details.header": "Bank details",
   "user.settings.form.change.password.header": "Change password",
   "user.settings.form.personal.info.header": "Personal information",
-  "user.settings.form.submit.button": "Save profile changes",
   "user.settings.form.settings.header": "Settings",
+  "user.settings.form.submit.button": "Save profile changes",
   "validations.email_pattern": "must look like an email address",
   "validations.maxlength": "is too long (maximum {{maxLength}} characters)",
   "validations.minlength": "is too short (minimum {{minLength}} characters)",
