--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -25,6 +25,7 @@
   "assignment.status.you_hired": "You've been hired",
   "button.form.submit.fail": "There are some errors, please review them above.",
   "button.form.submit.success": "Success!",
+  "card.document.upload.empty.documents": "Empty",
   "common.back": "Back",
   "common.congratulation": "Congratulations!",
   "common.error": "Oops, something went a bit wrong... But don't worry, we are on it!",
@@ -53,12 +54,7 @@
   "confirmation.password.reset.link.title": "A password reset message has been sent to you!",
   "confirmation.password.reset.title": "Successfully changed your password!",
   "contact.form.description": "Questions? Thoughts? We'd love to help!",
-  "contact.form.email.header": "Email",
-  "contact.form.email.placeholder": "Email",
   "contact.form.instruction": "Enter your details below.",
-  "contact.form.message.placeholder": "Message",
-  "contact.form.name.header": "Name",
-  "contact.form.name.placeholder": "Name",
   "contact.form.submit.button": "Send",
   "contact.title": "Contact",
   "cookies.accept.button": "Accept",
@@ -70,10 +66,6 @@
   "error.title": "An error occured!",
   "faq.answer.label": "Answers",
   "faq.title": "Questions and answers",
-  "finance.form.account_clearing_number.validation": "Clearing number missing",
-  "finance.form.account_number.validation": "Account number missing",
-  "forgot.password.form.email.or.phone.placeholder": "Email or Phone number",
-  "forgot.password.form.submit.button": "Send",
   "forgot.password.login.link": "Sign in",
   "forgot.password.submit.error": "Unfortunately, a password reset link could not be sent.",
   "forgot.password.title": "Restore password",
@@ -159,6 +151,9 @@
   "input.residence.permit.front.description": "Front photo of my residence permit",
   "input.residence.permit.front.header": "Residence permit",
   "input.residence.permit.front.label": "Residence permit",
+  "input.resume.header": "Resumé",
+  "input.resume.label": "Resumé",
+  "input.resume.subheader": "Previously uploaded resumés",
   "input.skatteverket.certificate.description": "Photo of my coordination number certificate (from the swedish tax agency)",
   "input.skatteverket.certificate.header": "Coordination number certificate",
   "input.skatteverket.certificate.label": "Coordination number certificate",
@@ -191,9 +186,7 @@
   "language.proficiency.expert": "Native speaker",
   "language.proficiency.intermediate": "Working proficiency",
   "language.proficiency.professional": "Professional proficiency",
-  "login.form.email.or.phone.placeholder": "Email or Phone number",
   "login.form.forgot.password.link": "Forgotten your password?",
-  "login.form.password.placeholder": "Password",
   "login.form.register.link": "Create account",
   "login.form.submit.button": "Sign in",
   "login.title": "Sign in",
@@ -219,11 +212,7 @@
   "menu.main.staffing_time_report": "Time report",
   "page.not.found.error.description": "Sorry, the page you are looking for does not exist.",
   "page.not.found.error.title": "404 - Page Not Found",
-  "reset.password.form.password.placeholder": "New password",
-  "reset.password.form.password.validation.min.length": "Password must be at least 6 characters long",
-  "reset.password.form.password.validation.required": "New password missing",
   "reset.password.form.submit.button": "Change password",
-  "reset.password.form.submit.error": "Unfortunately, the password could not be changed. Please request a new password reset link and try again.",
   "reset.password.title": "Set your new password",
   "skill.proficiency.basic": "Basic knowledge",
   "skill.proficiency.beginner": "Beginner",
@@ -240,12 +229,6 @@
   "user.profile.form.general.skills.section.header": "General skills",
   "user.profile.form.language.skills.section.header": "Language skills",
   "user.profile.form.personal.presentation.section.header": "Personal presentation",
-  "user.profile.form.resume.label": "Resumé",
-  "user.profile.form.resume.list.title": "Previously uploaded resumés.",
-  "user.profile.form.resume.upload.button": "Upload",
-  "user.profile.form.resume.upload.description": "Upload your resumé",
-  "user.profile.form.resume.upload.fail": "Resumé could not be uploaded, please try again (PDF works best).",
-  "user.profile.form.resume.upload.success": "Resumé has been uploaded.",
   "user.profile.form.status.section.header": "Status",
   "user.profile.form.submit.button": "Save profile changes",
   "user.profile.form.work.experience.section.header": "Work experience",
