form submit button padding fix and update profile header background color

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -230,7 +230,7 @@
   "user.profile.form.language.skills.section.header": "Language skills",
   "user.profile.form.personal.presentation.section.header": "Personal presentation",
   "user.profile.form.status.section.header": "Status",
-  "user.profile.form.submit.button": "Save profile changes",
+  "user.profile.form.submit.button": "Save changes",
   "user.profile.form.work.experience.section.header": "Work experience",
   "user.profile.header.information": "Remember that a complete profile increases your chances of getting jobs",
   "user.profile.header.title": "Profile",
@@ -248,7 +248,7 @@
   "user.settings.form.change.password.header": "Change password",
   "user.settings.form.personal.info.header": "Personal information",
   "user.settings.form.settings.header": "Settings",
-  "user.settings.form.submit.button": "Save profile changes",
+  "user.settings.form.submit.button": "Save changes",
   "validations.email_pattern": "must look like an email address",
   "validations.maxlength": "is too long (maximum {{maxLength}} characters)",
   "validations.minlength": "is too short (minimum {{minLength}} characters)",
